# dask_relabeling

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: test_relabeling_2D.ipynb  test_relabeling_3D.ipynb
relabel/: __init__.py  chunkops.py  relabeling.py  utils.py
relabeling/: __init__.py  chunkops.py  relabeling.py  utils.py
tests/: fixtures.py  samples.py  samples3d.py  test_relabeling.py
tests/samples/: ann_2d.npz  input_2d.npz  input_3d.npz  ovp_input_2d.npz  ovp_input_3d.npz  rem_2d.npz  rem_3d.npz  seg_2d.npz  seg_3d.npz  sort_2d.npz  sort_3d.npz  trim_2d.npz  trim_3d.npz
